# Civistash

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  HF_README.md  LICENSE  PLAN.md  README.md  dataset_infos.json  docker-compose.yml  justfile  rustfmt.toml
.github/workflows/: ci-docker.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml
docs/: configuration.md  deployment.md  index.md
src/: main.rs
src/api/: mod.rs
src/bundle/: mod.rs
src/cli/: mod.rs
src/cycle/: mod.rs
src/daemon/: mod.rs
src/download/: mod.rs
src/storage/: mod.rs
src/ui/: mod.rs
src/upload/: mod.rs
