[package]
name         = "civistash"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88.0"
description  = "Archiver for popular CivitAI images with full metadata sidecars"
license      = "MIT"

[[bin]]
name = "civistash"
path = "src/main.rs"

[dependencies]
# ── Async Runtime ─────────────────────────────────────────
# Note: §5.6 of PLAN.md requires tokio::signal for the daemon's signal
# race. This crate was not listed in the §3 dependency table — added here
# with the minimum feature set needed by the code in this crate.
tokio         = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }

# ── Command-Line Interface ─────────────────────────────────
clap         = { version = "4", features = ["derive", "env"] }

# ── Logging ────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# ── Terminal Output ────────────────────────────────────────
owo-colors   = { version = "4", features = ["supports-colors"] }
indicatif    = "0.18"

# ── HTTP Client ────────────────────────────────────────────
# Note: PLAN.md §3 listed `rustls-tls` as the reqwest feature, but
# reqwest 0.13 renamed it to `rustls` and split cert handling into
# separate features. `webpki-roots` bundles Mozilla's CA set so the
# binary stays self-contained and works on the distroless image
# (no OS-provided CA store).
reqwest      = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json", "stream"] }
futures      = "0.3"

# ── Serialization ──────────────────────────────────────────
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# ── Time ───────────────────────────────────────────────────
chrono       = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# ── Error Handling ─────────────────────────────────────────
anyhow       = "1"
thiserror    = "2"

# ── Release Profile ────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
