[package]
name         = "civistash"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.89.0"
description  = "Archiver for popular CivitAI images with full metadata sidecars"
license      = "MIT"

[[bin]]
name = "civistash"
path = "src/main.rs"

[dependencies]
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
clap               = { version = "4", features = ["derive", "env"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
owo-colors         = { version = "4", features = ["supports-colors"] }
reqwest            = { version = "0.13", default-features = false, features = ["rustls", "webpki-roots", "json", "stream"] }
futures            = "0.3"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
chrono             = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow             = "1"
thiserror          = "2"
tar                = "0.4"
flate2             = "1"
hf-hub             = "1.0.0-rc.1"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = true
panic         = "abort"
